--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -24,3 +24,7 @@ jobs:
         npm test
       env:
         CI: true
+    - name: Run linter
+  run: |
+    npm install eslint --save-dev
+    ./node_modules/.bin/eslint --no-eslintrc .
